fix(index) sourecform bugs

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 sellerCounter +
                 '" placeholder=""></div></div><div class="row"><div class="col"><label>Születési hely:</label><input class="form-control" type="text" id="sellerBirthPlace' +
                 sellerCounter +
-                '" placeholder=""></div><div class="col"><label>Születési idő(év.hó.nap): </label><input  class="form-control" type="date" id="sellerBirthDate' +
+                '" placeholder=""></div><div class="col"><label>Születési idő(év.hó.nap): </label><input  class="form-control" type="date" max="3000-12-31" id="sellerBirthDate' +
                 sellerCounter +
                 '" placeholder=""></div></div><div class="row"><div class="col"><label>Anyja neve: </label><input class="form-control" type="text" id="sellerMothersName' +
                 sellerCounter +
@@ -519,7 +519,7 @@
                 buyerCounter +
                 '" placeholder=""></div></div><div class="row"><div class="col"><label>Születési hely:</label><input class="form-control" type="text" id="buyerBirthPlace' +
                 buyerCounter +
-                '" placeholder=""></div><div class="col"><label>Születési idő(év.hó.nap): </label><input  class="form-control" type="date" id="buyerBirthDate' +
+                '" placeholder=""></div><div class="col"><label>Születési idő(év.hó.nap): </label><input  class="form-control" type="date" max="3000-12-31" id="buyerBirthDate' +
                 buyerCounter +
                 '" placeholder=""></div></div><div class="row"><div class="col"><label>Anyja neve: </label><input class="form-control" type="text" id="buyerMothersName' +
                 buyerCounter +
